--- a/src/index.css
+++ b/src/index.css
@@ -54,17 +54,25 @@ body {
       flex: 1;
       height: 100%;
     }
+    .splitNoLabel {
+      display: flex;
+      justify-content: center;
+
+      flex: 1;
+      height: 100%;
+    }
   }
 }
 .contactContainer {
   background-color: white;
-  width: 40%;
+  width: 44%;
   height: 26em;
   gap: 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: 1s ease-out;
   .contactFormButton {
     font-size: 1.2rem;
     /* font-weight: bold; */
@@ -72,4 +80,7 @@ body {
     width: 18.4rem;
     border-radius: 2rem;
   }
+}
+.active {
+  transform: translateX(-50%);
 }
