--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,7 @@
   display: flex;
   background-color: white;
   aspect-ratio: 2550 / 3300;
-  height: auto;
+  /* height: auto; */
   height: 90%;
 }
 .sideBar {
@@ -263,5 +263,29 @@
         }
       }
     }
+  }
+}
+
+.resumeMainPage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.resumeButtonEditors {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10%;
+  width: auto;
+  flex: 1;
+  height: 90%;
+  background-color: red;
+  button {
+    width: 28%;
+    height: 4%;
   }
 }
