--- a/src/index.css
+++ b/src/index.css
@@ -407,3 +407,22 @@
     }
   }
 }
+.resumeButtonEditors {
+  .skillsMainContainer {
+    width: 98%;
+    .addSkillBtn {
+      width: 4rem;
+      height: 4rem;
+    }
+    .finishedSkillsBtn {
+      margin-top: -10%;
+      width: 40%;
+      height: 3rem;
+    }
+  }
+}
+.resumeButton {
+  border-radius: 20px;
+
+  max-width: 18rem;
+}
