--- a/src/index.css
+++ b/src/index.css
@@ -408,6 +408,7 @@
   }
 }
 .resumeButtonEditors {
+  background-color: orange;
   .skillsMainContainer {
     width: 98%;
     .addSkillBtn {
@@ -420,9 +421,4 @@
       height: 3rem;
     }
   }
-}
-.resumeButton {
-  border-radius: 20px;
-
-  max-width: 18rem;
 }
