fixed issue with preview lists not repopulating on experience and education components/ need to split up start-end date values into month AND year instead of month + year with same key

--- a/src/index.css
+++ b/src/index.css
@@ -422,3 +422,20 @@
     }
   }
 }
+
+.jobTitle {
+  color: black;
+}
+
+.resumeCategories {
+  color: navy;
+}
+
+.schoolLocation {
+  font-style: italic;
+  font-size: 1rem;
+  font-weight: normal;
+}
+.resumeDegree {
+  color: #767676;
+}
