split experience dates into 4 instead of two(startmonth/startyear/endmonth/etc.) add more color to resume page and set layout

--- a/src/index.css
+++ b/src/index.css
@@ -422,13 +422,19 @@
     }
   }
 }
+.resumeName {
+  color: #394d6b;
+}
+.resumeSkills {
+  color: #394d6b;
+}
 
 .jobTitle {
-  color: black;
+  color: #545457;
 }
 
 .resumeCategories {
-  color: navy;
+  color: #394d6b;
 }
 
 .schoolLocation {
